# canvas-author

./: .canvas.workflow.yaml  .env.e2e.example  .env.example  .gitignore  ARCHITECTURE-REDESIGN.md  CHANGELOG.md  CONTRIBUTING.md  PHASE-1-PROGRESS.md  README.md  SERVER.md  canvas-author-server.service  pyproject.toml  requirements.txt  setup.py  start-server.sh
.github/workflows/: e2e-tests.yml  pull-from-canvas.yml  sync-to-canvas.yml
canvas_author/: __init__.py  __main__.py  announcement_sync.py  assignment_groups.py  assignment_sync.py  assignments.py  cli.py  client.py  conversations.py  course_sync.py  datetime_utils.py  discussion_sync.py  discussions.py  draft_storage.py  exceptions.py  files.py  frontmatter.py  module_sync.py  modules.py  pages.py  pandoc.py  quiz_format.py  quiz_sync.py  quizzes.py  rubric_sync.py  rubrics.py  server.py  styling.py  submission_sync.py  sync.py  tool_access.py  validation.py  workflow.py
canvas_mcp/: __init__.py  assignments.py  cli.py  client.py  course_sync.py  discussions.py  frontmatter.py  module_sync.py  modules.py  pages.py  pandoc.py  quiz_format.py  quiz_sync.py  quizzes.py  rubrics.py  server.py  styling.py  sync.py
docs/: IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  WORKFLOW_IMPLEMENTATION.md  announcements-proposal.md  discussion-checkpoints-analysis.md
scripts/: sync-all.sh
tests/: __init__.py  conftest.py  test_client.py  test_exceptions.py  test_frontmatter.py  test_pages.py  test_pandoc.py  test_quiz_format.py
tests/e2e/: __init__.py  conftest.py  test_e2e_pages.py  test_e2e_quizzes.py  test_e2e_sync.py
