[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-author"
version = "0.1.2"
description = "Canvas LMS MCP server for managing wiki pages, assignments, discussions, announcements, and rubrics with markdown support"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "John Murray", email = "lucidbard@users.noreply.github.com"}
]
keywords = ["canvas", "lms", "mcp", "model-context-protocol", "markdown", "pandoc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "canvasapi>=3.0.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "premailer>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "e2e: End-to-end tests against real Canvas instance (require E2E_CANVAS_* env vars)",
    "slow: Slow-running tests",
]

[tool.coverage.run]
source = ["canvas_author"]
omit = ["canvas_author/server.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[project.scripts]
canvas-author = "canvas_author.cli:main"
canvas-mcp = "canvas_author.cli:main"  # Backwards compatibility alias

[project.urls]
Homepage = "https://github.com/lucidbard/canvas-author"
Repository = "https://github.com/lucidbard/canvas-author"
Issues = "https://github.com/lucidbard/canvas-author/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["canvas_author*"]
